# Service Status Changelog 

# Version 1.0.0

[Service Status - 40] Implement codecov.
[Service Status - 41] Create change user credentials store method.
[Service Status - 42] Add .editorconfig.
[Service Status - 43] Add assigned system to incidents. 
[Service Status - 44] Set status into incidents creation.
[Service Status - 45] Add changelog through the project.
[Service Status - 46] Create specific incident view.
[Service Status - 51] Add backup system.
[Service Status - 52] Implement Laravel debugbar.
[Service Status - 53] Set links to the incidents navbar section.
[Service Status - 56] Remove node_modules and add it to .gitignore